--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/IN5BM-control-academico-Octavio-Corzo-Jose-Herrera
 endorsed.classpath=
 excludes=
+file.reference.jfoenix-9.0.10.jar=../../../../../../../Downloads/jfoenix-9.0.10.jar
 file.reference.mysql-connector-java-8.0.29.jar=lib/mysql-connector-java-8.0.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.29.jar}
+    ${file.reference.mysql-connector-java-8.0.29.jar}:\
+    ${file.reference.jfoenix-9.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
